# flight_management

./: CMakeLists.txt  README.md
docs/: ConsiderationForSolution.txt  FlighManagement_Template_Code.cxx
include/: base_dataset.h  common_data.h  flight_data.h  flight_trip_database.h  helper_database.h
src/: flight_trip_database.cpp
test/: flight_trip_database_test.cpp  main.cpp
